--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "gulp-sequence": "^0.4.6",
     "gulp-sizereport": "^1.2.0",
     "gulp-sourcemaps": "^2.2.0",
+    "lodash": "^4.17.4",
     "tape": "^4.6.2",
     "webpack": "^2.1.0-beta.27",
     "webpack-dev-middleware": "^1.8.4",
